# Network_Resilience

./: .gitignore  README.md  README_RESEARCH.md  cascade_env.py  cascade_model.py  evaluate.py  gnn_agent.py  graph_utils.py  heuristics.py  my-two-diff-paths.txt  pyproject.toml  pyvenv.cfg  train.py
Ramona's cascading/: graph_functions.py  main.py  plot_50_node_cascade.py  test_cascading_failure.py
config/: default.yaml  diagnostic.yaml
docs/: architecture.md  dynamics_interpretation.md
eval_sets/: ds_validation.json  ds_validation.pkl  large_graph_large.json  large_graph_large.pkl  large_graph_medium.json  large_graph_medium.pkl  rl_comparison.pkl  validation_set.json
experiments/: README.md
notebooks/: README.md  latex.txt  references.txt
scripts/: action_comparison.py  aggregate_ablation_comparison.py  create_rl_comparison_eval_set.py  download_real_world_data.py  evaluate_er_graphs.py  evaluate_hard_regime.py  evaluate_larger_ba.py  evaluate_param_generalization.py  evaluate_policy.py  evaluate_real_world.py  evaluate_scaling.py  evaluate_topology_ablation.py  generate_eval_set.py  generate_large_graph_eval_set.py  greedy_rl_counterexample_report.py  map_regime.py  map_regime_comprehensive.py  plot_evaluation.py  plot_evaluation_tiers.py  plot_param_generalization.py  plot_recovery_connectivity_curves.py  plot_recovery_fraction_by_regime.py  plot_regime.py  print_regime_slice_stats.py  reproducibility.py  run_ablation.py  run_budget_search.py  run_full_evaluation.py  run_large_graph_eval.py  train_policy.py  validation_set.py  verify_checkpoint.py  (+1 more)
(+282 files in other folders)
