[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cascading-rl"
version = "0.1.0"
description = "Controlled lab for cascade and robustness in dependency networks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["networkx", "PyYAML", "torch>=2.6.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
data = ["networkx", "pandas"]
plot = ["matplotlib", "seaborn"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cascading_rl*"]
